--- a/hardware/compose.yaml
+++ b/hardware/compose.yaml
@@ -1,6 +1,21 @@
 services:
+  # ROS Noetic + ROS 2 Galactic
+  bridge:
+    image: ros:galactic-ros1-bridge
+    restart: on-failure
+    ipc: host
+    depends_on:
+      - rosbot_xl
+    environment:
+      - "ROS_IP=127.0.0.1"
+      - "ROS_MASTER_URI=http://127.0.0.1:11311"
+      - "ROS_DOMAIN_ID=0"
+    command: ros2 run ros1_bridge dynamic_bridge
+
   microros:
     image: husarion/micro-ros-agent
+    environment:
+      - "ROS_DOMAIN_ID=0"
     ports:
       - "8888:8888/udp"
     command: udp4 --port 8888
@@ -10,6 +25,8 @@ services:
       context: ./../
       dockerfile: ./hardware/Dockerfile
     container_name: rosbot_xl_ros
+    environment:
+      - "ROS_DOMAIN_ID=0"
     volumes:
       - ../src/rosbot_xl_ekf:/app/ros2_ws/src/rosbot_xl_ekf
       # - ./src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
@@ -17,9 +34,26 @@ services:
       - ../src/rosbot_xl_kinematics:/app/ros2_ws/src/rosbot_xl_kinematics
     command: ros2 run rosbot_xl_kinematics classic_kinematics
 
-  # ros-rplidar:
-  #   image: husarion/rplidar:latest
-  #   devices:
-  #     - /dev/ttyUSB0
-  #   tty: true        # docker run -t
-  #   command: roslaunch rplidar_ros rplidar.launch
+  ros-rplidar:
+    image: husarion/rplidar:latest
+    devices:
+      - /dev/ttyUSB0
+    environment:
+      - "ROS_IP=127.0.0.1"
+      - "ROS_MASTER_URI=http://127.0.0.1:11311"
+    tty: true        # docker run -t
+    command: roslaunch rplidar_ros rplidar_s1.launch
+
+  husarnet:
+    image: husarnet/husarnet
+    restart: unless-stopped
+    volumes:
+        - /var/lib/husarnet  # This will persist your Husarnet Client keys, thus IP of the container will be stable/the same between (re)boots
+    sysctls:
+        - net.ipv6.conf.all.disable_ipv6=0  # Husarnet is using IPv6 for the internal connections
+    cap_add:
+        - NET_ADMIN
+    devices:
+        - /dev/net/tun
+    env_file: 
+        - ./.env  # create .env file in the same folder as Dockerfile and specify HOSTNAME and JOINCODE there
