--- a/compose_pc/compose.yml
+++ b/compose_pc/compose.yml
@@ -4,9 +4,6 @@ services:
     image: husarion/nav2:galactic
     tty: true
     restart: on-failure
-    network_mode: service:husarnet-discovery-server
-    logging:
-      driver: none
     volumes:
       - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
     command: ros2 launch husarion_nav2 bringup_both.launch.py
@@ -17,7 +14,6 @@ services:
     restart: on-failure
     logging:
       driver: none
-    network_mode: service:husarnet-discovery-server
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility,display
@@ -25,4 +21,6 @@ services:
       - ./rviz_docker_config/pusher.rviz:/root/.rviz2/default.rviz
       - ./rviz_docker_config/.bash_history:/root/.bash_history
     shm_size: '512m'
-    runtime: nvidias
+    runtime: nvidia
+    ports:
+      - 6080:80
