--- a/compose_robot/compose.yaml
+++ b/compose_robot/compose.yaml
@@ -14,10 +14,17 @@ services:
     environment:
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
+      - CYCLONEDDS_URI=file:///cyclonedds.xml
+    volumes:
+      - ./cyclonedds.xml:/cyclonedds.xml
     command: ros2 run ros1_bridge dynamic_bridge
 
   microros:
     image: husarion/micro-ros-agent
+    environment:
+      - CYCLONEDDS_URI=file:///cyclonedds.xml
+    volumes:
+      - ./cyclonedds.xml:/cyclonedds.xml
     ports:
       - "8888:8888/udp"
     command: udp4 --port 8888
@@ -27,7 +34,10 @@ services:
       context: ./../
       dockerfile: ./hardware/Dockerfile
     container_name: rosbot_xl_ros
+    environment:
+      - CYCLONEDDS_URI=file:///cyclonedds.xml
     volumes:
+      - ./cyclonedds.xml:/cyclonedds.xml
       - ../src/rosbot_xl_ekf:/app/ros2_ws/src/rosbot_xl_ekf
       # - ./src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
       - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
