--- a/compose_pc/compose.yml
+++ b/compose_pc/compose.yml
@@ -1,13 +1,4 @@
 services:
-  # ROS Foxy navigation
-  nav2:
-    image: husarion/nav2:galactic
-    tty: true
-    restart: on-failure
-    volumes:
-      - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-    command: ros2 launch husarion_nav2 bringup_both.launch.py
-
   # ROS Foxy Rviz2 VNC
   rviz2:
     image: husarion/ros2-desktop-vnc:latest
@@ -17,7 +8,9 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility,display
+      - CYCLONEDDS_URI=file:///cyclonedds.xml
     volumes:
+      - ./cyclonedds.xml:/cyclonedds.xml
       - ./rviz_docker_config/pusher.rviz:/root/.rviz2/default.rviz
       - ./rviz_docker_config/.bash_history:/root/.bash_history
     shm_size: '512m'
