--- a/compose_pc/compose.yml
+++ b/compose_pc/compose.yml
@@ -1,19 +1,14 @@
 services:
   # ROS Foxy Rviz2 VNC
-  rviz2:
-    image: husarion/ros2-desktop-vnc:latest
-    restart: on-failure
-    logging:
-      driver: none
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility,display
-      - CYCLONEDDS_URI=file:///cyclonedds.xml
-    volumes:
-      - ./cyclonedds.xml:/cyclonedds.xml
-      - ./rviz_docker_config/pusher.rviz:/root/.rviz2/default.rviz
-      - ./rviz_docker_config/.bash_history:/root/.bash_history
-    shm_size: '512m'
+  rviz:
+    image: husarion/rviz2
+    network_mode: host
+    ipc: host
     runtime: nvidia
-    ports:
-      - 6080:80
+    environment:
+      - DISPLAY
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=all
+    volumes: 
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - ./rosbot_pro.rviz:/root/.rviz2/default.rviz
