--- a/compose_robot/compose.yaml
+++ b/compose_robot/compose.yaml
@@ -1,19 +1,21 @@
 services:
   # ROS Foxy navigation
-  nav2:
-    image: husarion/nav2:galactic
-    tty: true
-    restart: on-failure
-    environment:
-      - CYCLONEDDS_URI=file:///cyclonedds.xml
-    volumes:
-      - ./cyclonedds.xml:/cyclonedds.xml
-      - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-    command: ros2 launch husarion_nav2 bringup_both.launch.py
+  # nav2:
+  #   image: husarion/nav2:galactic
+  #   tty: true
+  #   restart: on-failure
+  #   network_mode: host
+  #   environment:
+  #     - CYCLONEDDS_URI=file:///cyclonedds.xml
+  #   volumes:
+  #     - ./cyclonedds.xml:/cyclonedds.xml
+  #     - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
+  #   command: ros2 launch husarion_nav2 bringup_both.launch.py
 
   ros-master:
     image: ros:melodic-ros-core
     restart: on-failure
+    network_mode: host
     environment:
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
@@ -23,6 +25,7 @@ services:
   bridge:
     image: ros:galactic-ros1-bridge
     restart: on-failure
+    network_mode: host
     environment:
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
@@ -33,6 +36,7 @@ services:
 
   microros:
     image: husarion/micro-ros-agent
+    network_mode: host
     environment:
       - CYCLONEDDS_URI=file:///cyclonedds.xml
     volumes:
@@ -44,8 +48,9 @@ services:
   rosbot_xl:
     build:
       context: ./../
-      dockerfile: ./hardware/Dockerfile
+      dockerfile: ./compose_robot/Dockerfile
     container_name: rosbot_xl_ros
+    network_mode: host
     environment:
       - CYCLONEDDS_URI=file:///cyclonedds.xml
     volumes:
@@ -54,10 +59,13 @@ services:
       # - ./src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
       - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
       - ../src/rosbot_xl_kinematics:/app/ros2_ws/src/rosbot_xl_kinematics
-    command: ros2 run rosbot_xl_kinematics classic_kinematics
+    command: ros2 launch rosbot_xl_description description.launch.py
+    # command: ros2 run rosbot_xl_kinematics classic_kinematics
+    
 
   ros-rplidar:
     image: husarion/rplidar:latest
+    network_mode: host
     devices:
       - /dev/ttyUSB0
     environment:
