--- a/compose_robot/compose.lan.yaml
+++ b/compose_robot/compose.lan.yaml
@@ -2,11 +2,7 @@ services:
   # ROS Foxy navigation
   # nav2:
   #   network_mode: host
-  #   icp: host
-  #   environment:
-  #     - CYCLONEDDS_URI=file:///cyclonedds.xml
-  #   volumes:
-  #     - ./cyclonedds.xml:/cyclonedds.xml
+  #   ipc: host
 
   ros-master:
     network_mode: host
@@ -14,34 +10,23 @@ services:
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
 
-
-  # ROS Noetic + ROS 2 Galactic
+  # ROS Noetic + ROS 2 Foxy
   bridge:
     network_mode: host
     environment:
+      - ROS_DOMAIN_ID=21
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
-      - CYCLONEDDS_URI=file:///cyclonedds.xml
-    volumes:
-      - ./cyclonedds.xml:/cyclonedds.xml
 
   microros:
     network_mode: host
     environment:
-      - CYCLONEDDS_URI=file:///cyclonedds.xml
-    volumes:
-      - ./cyclonedds.xml:/cyclonedds.xml
-    ports:
-      - "8888:8888/udp"
-
+      - ROS_DOMAIN_ID=21
 
   rosbot_xl:
     network_mode: host
     environment:
-      - CYCLONEDDS_URI=file:///cyclonedds.xml
-    volumes:
-      - ./cyclonedds.xml:/cyclonedds.xml
-
+      - ROS_DOMAIN_ID=21
 
   ros-rplidar:
     network_mode: host
