Working communication with PC

--- a/compose_robot/husarion_nav2_config/nav2_params.yaml
+++ b/compose_robot/husarion_nav2_config/nav2_params.yaml
@@ -138,7 +138,7 @@ local_costmap:
         mark_threshold: 0
         observation_sources: scan
         scan:
-          topic: /scan_filtered
+          topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -175,7 +175,7 @@ global_costmap:
         enabled: True
         observation_sources: scan
         scan:
-          topic: /scan_filtered
+          topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
