--- a/compose_robot/husarion_nav2_config/slam_toolbox.yaml
+++ b/compose_robot/husarion_nav2_config/slam_toolbox.yaml
@@ -13,7 +13,7 @@ slam_toolbox:
     odom_frame: odom
     map_frame: map
     base_frame: base_link
-    scan_topic: /scan_filtered
+    scan_topic: /scan
 
     debug_logging: false
     throttle_scans: 1
