--- a/compose_robot/compose.lan.yaml
+++ b/compose_robot/compose.lan.yaml
@@ -1,8 +1,7 @@
 services:
-  # ROS Foxy navigation
-  # nav2:
-  #   network_mode: host
-  #   ipc: host
+  nav2:
+    network_mode: host
+    ipc: host
 
   ros-master:
     network_mode: host
@@ -10,23 +9,17 @@ services:
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
 
-  # ROS Noetic + ROS 2 Foxy
   bridge:
     network_mode: host
     environment:
-      # - ROS_DOMAIN_ID=21
       - "ROS_IP=127.0.0.1"
       - "ROS_MASTER_URI=http://127.0.0.1:11311"
 
   microros:
     network_mode: host
-    # environment:
-    #   - ROS_DOMAIN_ID=21
 
   rosbot_xl:
     network_mode: host
-    # environment:
-    #   - ROS_DOMAIN_ID=21
 
   ros-rplidar:
     network_mode: host
