--- a/src/rosbot_xl_bringup/CMakeLists.txt
+++ b/src/rosbot_xl_bringup/CMakeLists.txt
@@ -1,23 +1,21 @@
 cmake_minimum_required(VERSION 3.5)
-project(rosbot_xl_description)
+project(rosbot_xl_bringup)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-find_package(ament_cmake REQUIRED
-  rosbot_xl_controllers
-  pluginlib)
+# find dependencies
+find_package(ament_cmake REQUIRED)
 
-install(
-  DIRECTORY rviz models config
+install(DIRECTORY
+  launch
   DESTINATION share/${PROJECT_NAME}
 )
 
-ament_environment_hooks()
-ament_environment_hooks("${CMAKE_CURRENT_SOURCE_DIR}/env-hooks/${PROJECT_NAME}.dsv.in")
 ament_package()
