--- a/src/rosbot_xl_ekf/CMakeLists.txt
+++ b/src/rosbot_xl_ekf/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(ament_cmake REQUIRED)
 find_package(robot_localization REQUIRED)
 
 install(
-  DIRECTORY launch config 
+  DIRECTORY config 
   DESTINATION share/${PROJECT_NAME}
 )
 
