--- a/compose_robot/Dockerfile
+++ b/compose_robot/Dockerfile
@@ -25,6 +25,7 @@ WORKDIR /app
 RUN mkdir -p ros2_ws/src
 
 # copy packages
+COPY ./src/rosbot_xl_bringup /app/ros2_ws/src/rosbot_xl_bringup
 COPY ./src/rosbot_xl_ekf /app/ros2_ws/src/rosbot_xl_ekf
 # COPY ./src/rosbot_xl_hardware /app/ros2_ws/src/rosbot_xl_hardware
 COPY ./src/rosbot_xl_description /app/ros2_ws/src/rosbot_xl_description
