--- a/compose_robot/compose.yaml
+++ b/compose_robot/compose.yaml
@@ -1,12 +1,12 @@
 services:
-  nav2:
-    image: husarion/nav2:galactic-latest
-    restart: on-failure
-    logging:
-      driver: none
-    environment:
-      - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-    command: ros2 launch husarion_nav2 bringup_both.launch.py
+  # nav2:
+  #   image: husarion/nav2:galactic-latest
+  #   restart: on-failure
+  #   logging:
+  #       driver: none
+  #   environment:
+  #     - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
+  #   command: ros2 launch husarion_nav2 bringup_both.launch.py
 
   ros-master:
     image: ros:melodic-ros-core
@@ -28,12 +28,12 @@ services:
       dockerfile: ./compose_robot/Dockerfile
     container_name: rosbot_xl_ros
     volumes:
+      - ../src/rosbot_xl_bringup:/app/ros2_ws/src/rosbot_xl_bringup
+      - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
       - ../src/rosbot_xl_ekf:/app/ros2_ws/src/rosbot_xl_ekf
       # - ./src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
-      - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
       - ../src/rosbot_xl_kinematics:/app/ros2_ws/src/rosbot_xl_kinematics
-    command: ros2 launch rosbot_xl_description description.launch.py
-    # command: ros2 run rosbot_xl_kinematics classic_kinematics
+    command: ros2 launch rosbot_xl_bringup all.launch.py
 
   ros-rplidar:
     image: husarion/rplidar:latest
