Update simulation dockerfile to galactic, change dependency installation to rosdep

--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -1,4 +1,4 @@
-FROM osrf/ros:foxy-desktop
+FROM osrf/ros:galactic-desktop
 
 # select bash as default shell
 SHELL ["/bin/bash", "-c"]
@@ -6,15 +6,17 @@ SHELL ["/bin/bash", "-c"]
 # install dependencies
 RUN apt update && apt upgrade -y && apt install -y \
     python3-pip \
-    python3-colcon-common-extensions \
-    ros-$ROS_DISTRO-ros2-control \
-    ros-$ROS_DISTRO-ros2-controllers \
-    ros-$ROS_DISTRO-xacro \
-    ros-$ROS_DISTRO-gazebo-ros-pkgs \
-    ros-$ROS_DISTRO-geographic-msgs \
-    ros-$ROS_DISTRO-robot-localization \
-    ros-$ROS_DISTRO-joint-state-publisher \
-    ros-$ROS_DISTRO-joint-state-publisher-gui
+    python3-colcon-common-extensions
+    
+# should be installed by rosdep
+# ros-$ROS_DISTRO-ros2-control \
+# ros-$ROS_DISTRO-ros2-controllers \
+# ros-$ROS_DISTRO-xacro \
+# ros-$ROS_DISTRO-gazebo-ros-pkgs \
+# ros-$ROS_DISTRO-geographic-msgs \
+# ros-$ROS_DISTRO-robot-localization \
+# ros-$ROS_DISTRO-joint-state-publisher \
+# ros-$ROS_DISTRO-joint-state-publisher-gui
 
 # install everything inside /app folder
 WORKDIR /app
@@ -29,6 +31,7 @@ COPY ./src /app/ros2_ws/src
 RUN cd ros2_ws \
     && source /opt/ros/$ROS_DISTRO/setup.bash \
     && rosdep update --rosdistro $ROS_DISTRO \
+    && rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y \
     && colcon build --symlink-install
     
 # clear ubuntu packages
