--- a/src/rosbot_xl_description/package.xml
+++ b/src/rosbot_xl_description/package.xml
@@ -9,13 +9,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>controller_manager</build_depend>
-  <build_depend>joint_state_controller</build_depend>
+  <build_depend>joint_state_broadcaster</build_depend>
   <build_depend>joint_state_publisher</build_depend>
   <build_depend>robot_state_publisher</build_depend>
   <build_depend>xacro</build_depend>
 
   <exec_depend>controller_manager</exec_depend>
-  <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>xacro</exec_depend>
