--- a/src/rosbot_xl_gazebo/package.xml
+++ b/src/rosbot_xl_gazebo/package.xml
@@ -14,10 +14,9 @@
   <exec_depend>gazebo_ros</exec_depend>
   <build_depend>rosbot_xl_description</build_depend>
 
-  <exec_depend>rosbot_xl_controllers</exec_depend>
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>controller_manager</exec_depend>
-  <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
