--- a/src/rosbot_xl_hardware/package.xml
+++ b/src/rosbot_xl_hardware/package.xml
@@ -15,6 +15,7 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>realtime_tools</depend>
 
   <build_depend>pluginlib</build_depend>
   <test_depend>ament_cmake_gtest</test_depend>
