--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .vscode/*
 !.vscode/settings_template.json
+!.vscode/c_cpp_properties_template.json
 .devcontainer/devcontainer.json
 .devcontainer/Dockerfile
 
