--- a/compose_robot/compose.yaml
+++ b/compose_robot/compose.yaml
@@ -1,12 +1,16 @@
 services:
-  # nav2:
-  #   image: husarion/nav2:galactic-latest
-  #   restart: on-failure
-  #   logging:
-  #       driver: none
-  #   environment:
-  #     - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-  #   command: ros2 launch husarion_nav2 bringup_both.launch.py
+  nav2:
+    image: husarion/nav2:galactic-latest
+    restart: on-failure
+    logging:
+        driver: none
+    environment:
+      - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
+    command: 
+      - bash
+      - -c
+      - |
+        ros2 launch husarion_nav2 bringup_both.launch.py
 
   ros-master:
     image: ros:melodic-ros-core
