Working temporary network setup

--- a/compose_robot/compose.yaml
+++ b/compose_robot/compose.yaml
@@ -1,6 +1,7 @@
 services:
   nav2:
-    image: husarion/nav2:galactic-latest
+    # image: husarion/nav2:galactic-latest
+    build: ./nav2_mod/
     restart: on-failure
     logging:
         driver: none
