--- a/src/rosbot_xl_hardware/CMakeLists.txt
+++ b/src/rosbot_xl_hardware/CMakeLists.txt
@@ -56,6 +56,11 @@ install(
 )
 
 install(
+  DIRECTORY launch config
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
   TARGETS ${PROJECT_NAME}
   RUNTIME DESTINATION bin
   ARCHIVE DESTINATION lib
