Moved to official nav2 image

--- a/compose_robot/compose.yaml
+++ b/compose_robot/compose.yaml
@@ -1,7 +1,6 @@
 services:
   nav2:
-    # image: husarion/nav2:galactic-latest
-    build: ./nav2_mod/
+    image: husarion/nav2:galactic-latest
     restart: unless-stopped
     logging:
         driver: none
