--- a/src/rosbot_xl_hardware/config/diff_drive_controller.yaml
+++ b/src/rosbot_xl_hardware/config/diff_drive_controller.yaml
@@ -15,22 +15,26 @@ rosbot_xl_base_controller:
     wheel_separation: 0.252
     wheel_radius: 0.05
 
-    wheel_separation_multiplier: 1.5
+    # For skid drive kinematics it will act as ICR coefficient
+    # Kinematic model with ICR coefficient isn't totally accurate and this coefficient can differ
+    # for various ground types, but checking on our office floor 1.3 looked approximately alright
+    wheel_separation_multiplier: 1.3
+
     left_wheel_radius_multiplier: 1.0
     right_wheel_radius_multiplier: 1.0
 
-    publish_rate: 50.0
+    # Feedback from motors is published at around 20 Hz
+    publish_rate: 25.0
     odom_frame_id: odom
     base_frame_id: base_link
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
 
     # Whether to use feedback or commands for odometry calculations
-    # (feedback is not working correctly yet)
     open_loop: false
 
-    # Update odometry from velocities instead of positions
-    position_feedback: false
+    # Update odometry from position (at the time of writing velocity update is still bugged)
+    position_feedback: true
     enable_odom_tf: false
 
     cmd_vel_timeout: 0.5
@@ -47,7 +51,7 @@ rosbot_xl_base_controller:
         has_jerk_limits: false
         max_velocity: 0.5 # m/s
         # min_velocity -  When unspecified, -max_velocity is used
-        max_acceleration: 0.25 # m/s^2
+        max_acceleration: 0.5 # m/s^2
         # min_acceleration - When unspecified, -max_acceleration is used.
         max_jerk: 0.0 # m/s^3
 
