--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -31,7 +31,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: docker/
+        context: .
         file: docker/Dockerfile
         platforms: linux/arm64
         push: true
