--- a/docker/compose.rosbot.yaml
+++ b/docker/compose.rosbot.yaml
@@ -1,68 +1,83 @@
+
+# Quick Start (at fist stop ROS Master if working on host)
+# $ docker compose -f compose.rosbot.yaml up
+
+version: "2.3"
+
 services:
+  # ROS Galactic
   nav2:
     image: husarion/nav2:galactic-latest
     restart: unless-stopped
-    logging:
-        driver: none
-    environment:
+    network_mode: host
+    ipc: host
+    volumes:
       - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-    command: 
-      - bash
-      - -c
-      - |
-        ros2 launch husarion_nav2 bringup_both.launch.py
+    environment:
+      - ROS_DOMAIN_ID=138
+    command: ros2 launch husarion_nav2 bringup_both.launch.py
 
+  # ROS Master (using custom port in case Master is already running on host OS)
   ros-master:
     image: ros:melodic-ros-core
     restart: unless-stopped
+    network_mode: host
+    ipc: host
     environment:
-      - "ROS_IP=ros-master"
-    command: roscore
+      - ROS_IP=127.0.0.1
+    command: stdbuf -o L roscore
 
+  # ROS Noetic + ROS 2 Galactic
   bridge:
     image: ros:galactic-ros1-bridge
     restart: unless-stopped
+    network_mode: host
+    ipc: host
     environment:
-      - "ROS_IP=bridge"
-      - "ROS_MASTER_URI=http://ros-master:11311"
+      - ROS_IP=127.0.0.1
+      - ROS_MASTER_URI=http://127.0.0.1:11311
+      - ROS_DOMAIN_ID=138
     command: ros2 run ros1_bridge dynamic_bridge
 
+  # ROS 2 Galacitc
   microros:
     image: husarion/micro-ros-agent
     restart: unless-stopped
-    ports:
-      - "8888:8888/udp"
+    network_mode: host
+    ipc: host
+    environment:
+      - ROS_DOMAIN_ID=138
+    # ports:
+    #   - "8888:8888/udp"
     command: udp4 --port 8888
 
+  # ROS 2 Galacitc
   rosbot_xl:
     build:
       context: ./../
       dockerfile: ./docker/Dockerfile
     restart: unless-stopped
+    network_mode: host
+    ipc: host
     volumes:
       - ../src/rosbot_xl_bringup:/app/ros2_ws/src/rosbot_xl_bringup
       - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
       - ../src/rosbot_xl_ekf:/app/ros2_ws/src/rosbot_xl_ekf
       # - ./src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
       - ../src/rosbot_xl_kinematics:/app/ros2_ws/src/rosbot_xl_kinematics
+    environment:
+      - ROS_DOMAIN_ID=138
     command: ros2 launch rosbot_xl_bringup all.launch.py
 
-  ros-rplidar:
+  # ROS Melodic Rplidar
+  rplidar:
     image: husarion/rplidar:latest
     restart: unless-stopped
-    tty: true
+    network_mode: host
+    ipc: host
     devices:
       - /dev/ttyUSB0
     environment:
-      - "ROS_IP=ros-rplidar"
-      - "ROS_MASTER_URI=http://ros-master:11311"
+      - ROS_IP=127.0.0.1
+      - ROS_MASTER_URI=http://127.0.0.1:11311
     command: roslaunch rplidar_ros rplidar_s1.launch --wait
-
-  rviz:
-    image: husarion/ros2-desktop-vnc:latest
-    restart: unless-stopped
-    volumes:
-      - ./rviz_docker_config/rbxl.rviz:/root/.rviz2/default.rviz
-    ports: 
-      - 6080:80
-    shm_size: '512m'
