Progress. Almost work ~Nicolas

--- a/docker/compose.pc.yaml
+++ b/docker/compose.pc.yaml
@@ -15,7 +15,7 @@ services:
     ipc: host
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - ./rosbot_pro.rviz:/root/.rviz2/default.rviz
+      - ./rviz_docker_config/rbxl.rviz:/root/.rviz2/default.rviz
     environment:
       - ROS_DOMAIN_ID=138
       - DISPLAY
