--- a/docker/compose.rosbot.yaml
+++ b/docker/compose.rosbot.yaml
@@ -13,8 +13,8 @@ services:
     ipc: host
     volumes:
       - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-    environment:
-      - ROS_DOMAIN_ID=138
+    # environment:
+    #   - ROS_DOMAIN_ID=138
     command: ros2 launch husarion_nav2 bringup_both.launch.py
 
   # ROS Master (using custom port in case Master is already running on host OS)
@@ -36,20 +36,46 @@ services:
     environment:
       - ROS_IP=127.0.0.1
       - ROS_MASTER_URI=http://127.0.0.1:11311
-      - ROS_DOMAIN_ID=138
+      # - ROS_DOMAIN_ID=138
     command: ros2 run ros1_bridge dynamic_bridge
 
-  # ROS 2 Galacitc
   microros:
-    image: husarion/micro-ros-agent
+    image: microros/micro-ros-agent:galactic
     restart: unless-stopped
     network_mode: host
     ipc: host
-    environment:
-      - ROS_DOMAIN_ID=138
-    # ports:
-    #   - "8888:8888/udp"
+    # volumes:
+    #   - ./micro-ros_entrypoint.sh:/micro-ros_entrypoint.sh
+    # environment:
+    #   - ROS_DOMAIN_ID=138
+      # - ROS_LOCALHOST_ONLY=0
+    ports:
+      - "8888:8888/udp"
+    # command: udp4 -i 192.168.77.2 --port 8888
     command: udp4 --port 8888
+
+  # microros:
+  #   image: microros/micro-ros-agent:galactic
+  #   restart: unless-stopped
+  #   network_mode: host
+  #   ipc: host
+  #   environment:
+  #      - ROS_DOMAIN_ID=138
+  #   # ports:
+  #   # - "8888:8888/udp"
+  #   command: udp4 --port 8888 # -v6
+
+  # # ROS 2 Galacitc
+  # microros:
+  #   image: husarion/micro-ros-agent
+  #   restart: unless-stopped
+  #   network_mode: host
+  #   ipc: host
+  #   environment:
+  #     - ROS_DOMAIN_ID=138
+  #   # ports:
+  #   #   - "8888:8888/udp"
+  #   command: udp4 --port 8888
 
   # ROS 2 Galacitc
   rosbot_xl:
@@ -63,10 +89,10 @@ services:
       - ../src/rosbot_xl_bringup:/app/ros2_ws/src/rosbot_xl_bringup
       - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
       - ../src/rosbot_xl_ekf:/app/ros2_ws/src/rosbot_xl_ekf
-      # - ./src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
+      # - ../src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
       - ../src/rosbot_xl_kinematics:/app/ros2_ws/src/rosbot_xl_kinematics
-    environment:
-      - ROS_DOMAIN_ID=138
+    # environment:
+    #   - ROS_DOMAIN_ID=138
     command: ros2 launch rosbot_xl_bringup diff_drive.launch.py
 
   # ROS Melodic Rplidar
