--- a/docker/compose.rosbot.yaml
+++ b/docker/compose.rosbot.yaml
@@ -8,27 +8,15 @@ services:
   nav2:
     image: husarion/nav2:galactic-latest
     restart: unless-stopped
-    network_mode: host
-    ipc: host
     volumes:
       - ./husarion_nav2_config:/app/ros2_ws/src/husarion_nav2/config
-    # environment:
-    #   - ROS_DOMAIN_ID=138
     command: ros2 launch husarion_nav2 bringup_both.launch.py
 
   microros:
     image: microros/micro-ros-agent:galactic
     restart: unless-stopped
-    network_mode: host
-    ipc: host
-    # volumes:
-    #   - ./micro-ros_entrypoint.sh:/micro-ros_entrypoint.sh
-    # environment:
-    #   - ROS_DOMAIN_ID=138
-      # - ROS_LOCALHOST_ONLY=0
     # ports:
     #   - "8888:8888/udp"
-    # command: udp4 -i 192.168.77.2 --port 8888
     command: udp4 --port 8888
 
   # ROS 2 Galacitc
@@ -37,49 +25,30 @@ services:
       context: ./../
       dockerfile: ./docker/Dockerfile
     restart: unless-stopped
-    network_mode: host
-    ipc: host
     volumes:
       - ../src/rosbot_xl_bringup:/app/ros2_ws/src/rosbot_xl_bringup
       - ../src/rosbot_xl_description:/app/ros2_ws/src/rosbot_xl_description
       - ../src/rosbot_xl_ekf:/app/ros2_ws/src/rosbot_xl_ekf
       # - ../src/rosbot_xl_hardware:/app/ros2_ws/src/rosbot_xl_hardware
       - ../src/rosbot_xl_kinematics:/app/ros2_ws/src/rosbot_xl_kinematics
-    # environment:
-    #   - ROS_DOMAIN_ID=138
     command: ros2 launch rosbot_xl_bringup diff_drive.launch.py
 
   # ROS Noetic + ROS 2 Galactic
   bridge:
     image: ros:galactic-ros1-bridge
     restart: unless-stopped
-    network_mode: host
-    ipc: host
-    environment:
-      - ROS_IP=127.0.0.1
-      - ROS_MASTER_URI=http://127.0.0.1:11311
-      # - ROS_DOMAIN_ID=138
     command: ros2 run ros1_bridge dynamic_bridge
 
   # ROS Master (using custom port in case Master is already running on host OS)
   ros-master:
     image: ros:melodic-ros-core
     restart: unless-stopped
-    network_mode: host
-    ipc: host
-    environment:
-      - ROS_IP=127.0.0.1
     command: stdbuf -o L roscore
 
   # ROS Melodic Rplidar
   rplidar:
     image: husarion/rplidar:latest
     restart: unless-stopped
-    network_mode: host
-    ipc: host
     devices:
-      - /dev/ttyUSB1:/dev/ttyUSB0
-    environment:
-      - ROS_IP=127.0.0.1
-      - ROS_MASTER_URI=http://127.0.0.1:11311
+      - /dev/ttyUSB0
     command: roslaunch rplidar_ros rplidar_s1.launch --wait
