new version off dds xml config

--- a/docker/compose.pc.yaml
+++ b/docker/compose.pc.yaml
@@ -9,7 +9,7 @@ services:
 
   # ROS Galactic
   rviz:
-    image: husarion/rviz2
+    image: husarion/rviz2:latest
     restart: unless-stopped
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
