--- a/docker/compose.pc.husarnet.yaml
+++ b/docker/compose.pc.husarnet.yaml
@@ -1,7 +1,7 @@
 
 # Quick Start
 # $ xhost local:root
-# $ docker compose -f compose.pc.yaml -f compose.husarnet.yaml up
+# $ docker compose -f compose.pc.yaml -f compose.pc.husarnet.yaml up
 
 version: "2.3"
 
