--- a/demo/compose.rosbot.yaml
+++ b/demo/compose.rosbot.yaml
@@ -14,8 +14,8 @@ services:
   microros:
     image: microros/micro-ros-agent:galactic
     restart: unless-stopped
-    ports:
-      - "8888:8888/udp"
+    # ports:
+    #   - "8888:8888/udp"
     command: udp4 --port 8888
 
   # ROS 2 Galacitc
