--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -8,6 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        target-platform:
+          - "hardware"
+          - "simulation"
 
     steps:
     - name: Checkout
@@ -24,17 +30,17 @@ jobs:
     - name: Login to Docker Registry
       uses: docker/login-action@v1
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        registry: docker.io
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
           
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: docker/Dockerfile
-        platforms: linux/arm64
+        file: Dockerfile.${{ matrix.target-platform }}
+        platforms: linux/arm64, linux/amd64
         push: true
-        tags: ghcr.io/husarion/rosbot-xl
-        cache-from: type=registry,ref=ghcr.io/husarion/rosbot-xl:buildcache
-        cache-to: type=registry,ref=ghcr.io/husarion/rosbot-xl:buildcache,mode=max
+        tags: husarion/rosbot-xl:galactic-${{ matrix.target-platform }}
+        cache-from: type=registry,ref=husarion/rosbot-xl:galactic-${{ matrix.target-platform }}-buildcache
+        cache-to: type=registry,ref=husarion/rosbot-xl:galactic-${{ matrix.target-platform }}-buildcache,mode=max
