--- a/Dockerfile.hardware
+++ b/Dockerfile.hardware
@@ -7,36 +7,33 @@ WORKDIR /ros2_ws
 
 COPY src/ src/
 
-# install everything needed
-RUN apt-get update && apt-get install -y \
+RUN rm -rf src/rosbot_xl_gazebo/ && \
+    apt-get update && apt-get install -y \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
         ros-$ROS_DISTRO-teleop-twist-keyboard && \
     apt-get upgrade -y && \
-    # remove gazebo simulation folder
-    rm -rf src/rosbot_xl_gazebo/ && \
     # build & install ROSbot XL packages
     source /opt/ros/$ROS_DISTRO/setup.bash && \
     rosdep init && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
-    colcon build --symlink-install && \
-    # make the image smaller
-    export SUDO_FORCE_REMOVE=yes && \
-    apt-get remove -y \
-        python3-pip \
-        python3-colcon-common-extensions \
-        python3-rosdep && \       
-    apt-get autoremove -y && \
-    rm -rf log/ src/ && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    colcon build --symlink-install
 
 FROM husarion/ros:galactic-ros-core
 
 # select bash as default shell
 SHELL ["/bin/bash", "-c"]
+
+# RUN apt-get update && apt-get install -y \
+#         python3-pip \
+#         python3-colcon-common-extensions \
+#         python3-rosdep \
+#         ros-$ROS_DISTRO-teleop-twist-keyboard && \
+#     apt-get autoremove -y && \
+#     apt-get clean && \
+#     rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /ros2_ws /ros2_ws
 COPY config/ /config/
