--- a/Dockerfile.hardware
+++ b/Dockerfile.hardware
@@ -1,44 +1,38 @@
-FROM ros:galactic-ros-core AS builder
+FROM husarion/ros:galactic-ros-core
 
 # select bash as default shell
 SHELL ["/bin/bash", "-c"]
 
 WORKDIR /ros2_ws
 
-COPY src/ src/
+COPY . .
 
-RUN rm -rf src/rosbot_xl_gazebo/ && \
+ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+
+# install everything needed
+RUN rm -rf src/rosbot_xl_gazebo && \
     apt-get update && apt-get install -y \
         python3-pip \
         python3-colcon-common-extensions \
-        python3-rosdep \
-        ros-$ROS_DISTRO-teleop-twist-keyboard && \
+        python3-rosdep && \
     apt-get upgrade -y && \
     # build & install ROSbot XL packages
-    source /opt/ros/$ROS_DISTRO/setup.bash && \
+    source "/opt/ros/$ROS_DISTRO/setup.bash" && \
+    source "/fastdds_overlay/install/setup.bash" && \
     rosdep init && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
-    colcon build --symlink-install
-
-FROM husarion/ros:galactic-ros-core
-
-# select bash as default shell
-SHELL ["/bin/bash", "-c"]
-
-# RUN apt-get update && apt-get install -y \
-#         python3-pip \
-#         python3-colcon-common-extensions \
-#         python3-rosdep \
-#         ros-$ROS_DISTRO-teleop-twist-keyboard && \
-#     apt-get autoremove -y && \
-#     apt-get clean && \
-#     rm -rf /var/lib/apt/lists/*
-
-COPY --from=builder /ros2_ws /ros2_ws
-COPY config/ /config/
-COPY ros_entrypoint.sh /ros_entrypoint.sh
+    colcon build --symlink-install && \
+    # make the image smaller
+    export SUDO_FORCE_REMOVE=yes && \
+    apt-get remove -y \
+        python3-pip \
+        python3-colcon-common-extensions \
+        python3-rosdep && \       
+    apt-get autoremove -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 ENV RMW_IMPLEMENTATION=rmw_fastrtps_cpp
 
-
+ENTRYPOINT ["/ros2_ws/ros_entrypoint.sh"]
