--- a/demo/compose.pc.yaml
+++ b/demo/compose.pc.yaml
@@ -4,13 +4,11 @@
 # $ docker compose -f compose.pc.yaml up
 
 services:
-
-  # ROS Galactic
   rviz:
     image: husarion/rviz2:latest
     restart: unless-stopped
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - ./rviz_docker_config/rbxl.rviz:/root/.rviz2/default.rviz
+      - ./../config/rviz/rbxl.rviz:/root/.rviz2/default.rviz
     environment:
       - DISPLAY
